--- a/css/style.css
+++ b/css/style.css
@@ -1248,7 +1248,7 @@ ul.navbar-nav>li.header-get-a-quote:hover>a:after {
   margin: 20px 0;
   color: #fff;
   font-weight: 900;
-  text-transform: uppercase;
+  text-transform: none;
   letter-spacing: -1px;
 }
 
